# cv-healthcheck

./: .gitignore  API_MAPPING.md  DATA_SOURCE_MAPPING.md  DEVLOG.md  HEALTHCHECK_MATRIX.md  PROMPT.txt  README.md  ROADMAP.md  env.example  pyproject.toml  requirements.txt  start.sh
design/: CODEX_HANDOVER_v2.md  quick_hc_v7.html
docs/: review_2026-05-20.md
docs/research/: license_summary_report_xml_analysis.md
memory/: MEMORY.md  project_quick_hc_rebuild.md
scripts/: probe_api.sh  probe_auth_matrix.sh  probe_dataset_data.sh  probe_dataset_metadata.sh  probe_datasets_with_login_token.sh  probe_reports_with_login_token.sh
src/cvhealthcheck/: __init__.py  api_client.py  artifact_registry.py  auth.py  cli.py  config.py
src/cvhealthcheck/auth/: __init__.py  commvault_auth.py
src/cvhealthcheck/health/: __init__.py  model.py
src/cvhealthcheck/labreadiness/: __init__.py  collector.py  evaluator.py  models.py
src/cvhealthcheck/license_summary/: __init__.py  artifact.py  collect_rest.py  import_csv.py  import_html.py  models.py  normalize.py  service.py  validate.py
src/cvhealthcheck/metrics/: __init__.py  capacity.py  common.py  growth.py
src/cvhealthcheck/output/: __init__.py  json_report.py
src/cvhealthcheck/quickhc/: __init__.py  commcell.py  (+6 more)
tests/: test_backup_job_summary.py  test_license_summary.py  test_license_summary_web.py  test_platform_foundation.py  test_quick_hc_report.py  test_quickhc_overview_service.py  test_quickhc_registry.py  test_quickhc_source_provenance.py  test_security_assessment_import.py  test_security_assessment_registry.py
(+72 files in other folders)
