[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-healthcheck"
version = "0.1.0"
description = "Commvault HealthCheck and Reports Plus exploration tooling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "Flask>=3.0,<4",
    "requests>=2.31,<3",
]

[project.scripts]
cv-healthcheck = "cvhealthcheck.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
